--- a/composer.json
+++ b/composer.json
@@ -2,15 +2,16 @@
     "name": "hexlet/code",
     "bin": ["bin/gendiff"],
     "autoload": {
-        "psr-4": {
-            "Hexlet\\Code\\": "src/"
-        }
+        "files": [
+            "src/DIffer.php"
+        ]
     },
     "authors": [{
         "name": "Hfdbkm",
         "email": "alphaisback322@gmail.com"
     }],
     "require": {
-        "docopt/docopt": "^1.0"
+        "docopt/docopt": "^1.0",
+        "lstrojny/functional-php": "^1.17"
     }
 }
