--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,9 @@
     "require": {
         "docopt/docopt": "^1.0",
         "lstrojny/functional-php": "^1.17"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5",
+        "squizlabs/php_codesniffer": "^3.7"
     }
 }
