--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "bin": ["bin/gendiff"],
     "autoload": {
         "files": [
-            "src/DIffer.php"
+            "src/DIffer.php",
+            "src/Parsers.php"
         ]
     },
     "authors": [{
@@ -12,7 +13,8 @@
     }],
     "require": {
         "docopt/docopt": "^1.0",
-        "lstrojny/functional-php": "^1.17"
+        "lstrojny/functional-php": "^1.17",
+        "symfony/yaml": "^6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
